# cognitio-chat-framework

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  manage.py  protect_code.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/cognitio_app/: __init__.py  __main__.py
src/cognitio_app.dist-info/: METADATA  top_level.txt
src/cognitio_app/backend/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/cognitio_app/backend/api/: __init__.py  apps.py  middleware.py  serializers.py  urls.py
src/cognitio_app/backend/api/management/commands/: setup_webllm.py
src/cognitio_app/backend/api/migrations/: 0001_initial.py
src/cognitio_app/backend/api/models/: __init__.py  base.py  chat.py  system.py  users.py
src/cognitio_app/backend/api/services/: __init__.py  auth_service.py
src/cognitio_app/backend/api/utils/: __init__.py  helpers.py
src/cognitio_app/backend/api/views/: __init__.py  auth_views.py  chat_views.py  webllm_views.py
src/cognitio_app/backend/frontend-src/: babel.config.js  build.sh  package-lock.json  package.json  post-build.js  tsconfig.json  webpack.config.js
src/cognitio_app/backend/frontend-src/src/: App.tsx  config.ts  index.css  webpack-env.d.ts
src/cognitio_app/backend/frontend-src/src/components/: index.ts
src/cognitio_app/backend/frontend-src/src/components/Chat/: Chat.tsx
src/cognitio_app/backend/frontend-src/src/components/UI/: NotificationSystem.tsx
src/cognitio_app/backend/frontend-src/src/services/: api.ts  webllmBridgeService.ts  webllmService.ts
src/cognitio_app/backend/frontend-src/src/store/: index.ts
src/cognitio_app/backend/frontend-src/src/types/: index.ts
src/cognitio_app/backend/templates/: index.html
src/cognitio_app/resources/: .gitkeep  create_icon.py
