[build-system]
requires = ["briefcase>=0.3.17"]

[tool.briefcase]
project_name = "Cognitio Chat"
webllm_models = [
    "Llama-3.2-1B-Instruct",
    "Llama-3.2-3B-Instruct",
    "Phi-3.5-mini-instruct",
    "Qwen2.5-0.5B-Instruct",
    "Qwen2.5-1.5B-Instruct"
]
bundle = "org.webllm.chat"
version = "1.0.0"
description = "Local WebLLM chat application with Django backend and React frontend"
author = "Cognitio Team"
author_email = "ali.demir@cognitioi.com"
license.file = "LICENSE"
url = "https://github.com/Cognitio-Intelligence/cognitio-chat-framework"

[tool.briefcase.app.cognitio_app]
formal_name = "WebLLM Chat"
description = "Chat with local WebLLM models - privacy-first AI assistant"
long_description = """
WebLLM Chat is a privacy-first desktop application for chatting with local AI models:

✨ Key Features:
• Local WebLLM model integration
• Django REST API backend with React TypeScript frontend
• Privacy-first - all processing happens locally
• Cross-platform desktop application via BeeWare
• Modern, responsive chat interface
• Real-time WebLLM direct integration

🔒 Privacy First:
• All AI processing happens locally on your device
• No data is ever sent to external servers
• Full control over your conversations
• Open source and transparent

🚀 Easy to Use:
• Simple installation and setup
• Intuitive chat interface
• Multiple WebLLM model support
• Real-time streaming responses
"""
sources = ["src/cognitio_app"]
test_sources = ["tests"]

# Application icon
icon = "src/cognitio_app/resources/LOGO-light-vertical"

# Core dependencies - minimal set for WebLLM chat
requires = [
    # Desktop App Framework
    "toga>=0.4.0",
    
    # Django Core
    "django>=4.2.0",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.3.0",
    "django-cors-headers>=4.3.0",
    
    # Basic utilities
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
]

# Include essential files for distribution
resources = [
    "src/cognitio_app/backend",
    "src/cognitio_app/templates",
    "src/cognitio_app/static",
    "src/cognitio_app/staticfiles",
    "src/cognitio_app/resources",
    "manage.py",
    "LICENSE",
    "README.md",
]

# Exclude unnecessary files
exclude = [
    "src/cognitio_app/backend/frontend-src/node_modules",
    "src/cognitio_app/backend/frontend-src/src",
    "src/cognitio_app/backend/frontend-src/.next",
    "src/cognitio_app/backend/frontend-src/build",
    "src/cognitio_app/backend/frontend-src/coverage",
    "src/cognitio_app/backend/frontend-src/.nyc_output",
    "src/cognitio_app/backend/frontend-src/package*.json",
    "src/cognitio_app/backend/frontend-src/tsconfig.json",
    "src/cognitio_app/backend/frontend-src/vite.config.ts",
    "logs",
    "*.log",
    "*.db",
    "*.db-shm", 
    "*.db-wal",
    "venv",
    ".env*",
    "__pycache__",
    "*.pyc",
    "*.pyo",
    ".git*",
    ".DS_Store",
    "Thumbs.db",
    "*.tmp",
    "*.temp",
    "tests",
    "test_*",
    "*_test.py",
]

[tool.briefcase.app.cognitio_app.macOS]
deployment_target = "12.0"

requires = [
    "toga-cocoa>=0.4.5",
    "std-nslog>=1.0.3",
    
    # Core dependencies for macOS
    "django==4.2.16",
    "djangorestframework==3.15.2",
    "django-cors-headers==4.4.0",
    "djangorestframework-simplejwt==5.3.0",
    "requests==2.32.3",
    "python-dotenv==1.0.1",
    "python-dateutil==2.9.0",
    "pytz==2024.2",
]

icon = "src/cognitio_app/resources/LOGO-light-vertical"

[tool.briefcase.app.cognitio_app.macOS.dev]
extra_env.APP_MODE = "dev"
extra_env.PYTHONPATH = "src"
extra_env.WEBLLM_MODEL = "Llama-3.2-1B-Instruct-q4f16_1-MLC"
extra_env.LC_ALL = "en_US.UTF-8"
extra_env.LANG = "en_US.UTF-8"

[tool.briefcase.app.cognitio_app.macOS.app]
extra_env.APP_MODE = "dist"
extra_env.PYTHONPATH = "src"
extra_env.WEBLLM_MODEL = "Llama-3.2-1B-Instruct-q4f16_1-MLC"
extra_env.LC_ALL = "en_US.UTF-8"
extra_env.LANG = "en_US.UTF-8"
bundle_python = true
include_system_packages = true

# Specific resources for macOS app distribution
resources = [
    "src/cognitio_app/backend",
    "src/cognitio_app/templates", 
    "src/cognitio_app/static",
    "src/cognitio_app/staticfiles",
    "src/cognitio_app/resources",
    "setup_static.py",
    "manage.py",
    "LICENSE",
]

exclude = [
    "src/cognitio_app/backend/frontend-src/node_modules",
    "src/cognitio_app/backend/frontend-src/src", 
    "src/cognitio_app/backend/frontend-src/.next",
    "src/cognitio_app/backend/frontend-src/build",
    "src/cognitio_app/backend/frontend-src/coverage",
    "src/cognitio_app/backend/frontend-src/.nyc_output",
    "src/cognitio_app/backend/frontend-src/package*.json",
    "src/cognitio_app/backend/frontend-src/tsconfig.json",
    "src/cognitio_app/backend/frontend-src/vite.config.ts",
    "src/cognitio_app/backend/frontend-src/README.md",
    "logs",
    "*.log",
    "*.db",
    "*.db-shm", 
    "*.db-wal",
    "venv",
    ".env*",
    "__pycache__",
    "*.pyc",
    "*.pyo",
    ".git*",
    ".DS_Store",
    "Thumbs.db",
    "*.tmp",
    "*.temp",
    "*.md",
    "*.toml",
    "tests",
    "test_*",
    "*_test.py",
    ".*",
]

[tool.briefcase.app.cognitio_app.linux]
requires = [
    "toga-gtk>=0.4.0",
    
    # Core dependencies for Linux
    "django>=4.2.0",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.3.0",
    "django-cors-headers>=4.3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
]

system_requires = [
    "python3-dev",
    "libgirepository1.0-dev",
    "libcairo2-dev",
    "libpango1.0-dev",
    "libwebkitgtk-3.0-dev",
    "build-essential",
]

icon = "src/cognitio_app/resources/LOGO-light-vertical"

[tool.briefcase.app.cognitio_app.linux.dev]
extra_env.APP_MODE = "dev"
extra_env.PYTHONPATH = "src"
extra_env.WEBLLM_MODEL = "Llama-3.2-1B-Instruct-q4f16_1-MLC"

[tool.briefcase.app.cognitio_app.linux.app]
extra_env.APP_MODE = "dist"
extra_env.PYTHONPATH = "src"
extra_env.WEBLLM_MODEL = "Llama-3.2-1B-Instruct-q4f16_1-MLC"

[tool.briefcase.app.cognitio_app.linux.appimage]
bundle_python = true
include_system_packages = true
desktop_file_name = "webllm-chat"
desktop_file_generic_name = "WebLLM Chat"
desktop_file_comment = "Local WebLLM chat application"
desktop_file_categories = ["Office", "Chat", "Development"]

[tool.briefcase.app.cognitio_app.windows]
requires = [
    "toga-winforms>=0.4.0",
    
    # Core dependencies for Windows
    "django>=4.2.0",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.3.0",
    "django-cors-headers>=4.3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
]

icon = "src/cognitio_app/resources/LOGO-light-vertical"
system_installer_template = "https://github.com/beeware/briefcase-windows-msi-template"

[tool.briefcase.app.cognitio_app.windows.dev]
extra_env.APP_MODE = "dev"
extra_env.PYTHONPATH = "src"
extra_env.WEBLLM_MODEL = "Llama-3.2-1B-Instruct-q4f16_1-MLC"

[tool.briefcase.app.cognitio_app.windows.app]
extra_env.APP_MODE = "dist"
extra_env.PYTHONPATH = "src"
extra_env.WEBLLM_MODEL = "Llama-3.2-1B-Instruct-q4f16_1-MLC"
bundle_python = true
include_system_packages = true
installer_background_image = "src/cognitio_app/resources/LOGO-light-vertical"
installer_icon = "src/cognitio_app/resources/LOGO-light-vertical"

# Development and testing configuration
[tool.briefcase.dev]
debug = true
console_app = true

# Additional build configuration
[tool.briefcase.build]
optimize = true
strip_debug = false

# Distribution configuration
[tool.briefcase.package]
sign_tool = "briefcase"
notarize = false

# Update and versioning
[tool.briefcase.update]
check_for_updates = false
update_url = "https://github.com/Cognitio-Intelligence/cognitio-chat-framework/releases/latest"